feat: replace direct fraud detection call with Kafka event publishing